# data-go-youth-policy-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-reference.md  implementation-plan.md  reference-repo-notes.md
src/data_go_youth_policy_mcp/: api_client.py  code_reference.py  models.py  server.py
tests/: test_api_client.py  test_server.py
