[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-go-youth-policy-mcp"
version = "0.1.0"
description = "Read-only MCP server for the OnTong Youth Policy API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.0.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
data-go-youth-policy-mcp = "data_go_youth_policy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_go_youth_policy_mcp"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "T20"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
